<resources>
    <string name="app_name">Sell and Track</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">SIGNUP</string>
    <string name="login">LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="get_started">Get Started</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="price_per_unit">Price Per Unit</string>
    <string name="quantity">Quantity</string>
    <string name="item_code">Item Code</string>
    <string name="save">Save</string>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>


</resources>
