<?xml version="1.0" encoding="utf-8"?>

<layout>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/welcome_bg"
    tools:context=".screens.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hexagon"
            android:tint="@color/white"
            android:alpha="0.2"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/bowlby_one_sc"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/white"
                android:ems="15"
                android:fontFamily="@font/roboto"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:ems="15"

                android:fontFamily="@font/roboto"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/lets_go_button"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/whitebutton"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:stateListAnimator="@null"
            android:text="@string/let_s_go"
            android:textColor="@color/basic"
            android:textSize="18dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>