<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screens.welcome.WelcomeFragment"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:tint="@color/basic"
            tools:layout_editor_absoluteX="261dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/bowlby_one_sc"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/basic"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/redbutton"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/redbutton"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
</layout>