<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/welcome_bg"
        tools:context=".screens.manage.AddProductFragment">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/bitter_bold"
                android:gravity="center"
                android:text="Add Product"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="Please Enter the Product Details"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/item_code"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/item_code_edittext"
                    android:fontFamily="@font/roboto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="@color/white"
                    android:ems="15"
                    android:textColor="@color/white" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/name"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/item_name_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="@color/white"
                    android:ems="15"
                    android:fontFamily="@font/roboto"
                    android:inputType="text"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/quantity"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/item_qty_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/white"
                    android:ems="15"
                    android:fontFamily="@font/roboto"
                    android:inputType="number"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/price_per_unit"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/item_price_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/white"
                    android:ems="15"
                    android:inputType="number"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/white" />

            </LinearLayout>

            <Button
                android:id="@+id/save_prod_button"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/whitebutton"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/bitter_bold"
                android:stateListAnimator="@null"
                android:text="@string/save"
                android:textColor="@color/basic"
                android:textSize="18dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>